--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@
     margin: 0px;
 }
 
+@media screen and (min-width:769px) 
+{
+    #login-icon
+    {
+        display: none;
+    }
+}
+
 #search_div
 {
     border: 1px solid #eeeeee;
@@ -198,6 +206,95 @@ td{
     font-size: 15px;
     text-align: justify;
     color: #6a6a6a;
+}
+
+
+@media screen and (max-width:768px) 
+{
+    nav
+    {       
+        flex-direction: column; 
+        padding: 10px;   
+      
+
+    }
+    #nav_delivery
+    {
+        align-items: center;
+    }
+    
+    #vertical_line
+    {
+        display: none;
+    }
+
+    #login-icon{
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        height: 40px;
+    }
+    #search_div
+    {
+        width: 90vw;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    #search_div>input{
+        width: auto;
+    }
+
+    #hero-section{
+        display: none !important;
+    }
+
+    #login
+    {
+        display: none;
+    }
+    nav>button{
+        margin-top: 10px;
+    }
+    .card_section
+    {
+        margin-top: 30px !important;
+    }
+
+    #footer-r1
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #footer-r1>#table-1, #table-2
+    {
+        width: 100%;
+    }
+
+    td{
+        align-items: center;
+    }
+
+    #footer-r2
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #footer-r2>p
+    {
+        width: 100%;
+    }
+
+    #social-media{
+        margin-bottom: 20px;
+    }
+
+    #downloads{
+        align-items: center;
+    }
+    
+
 }
 
 
